--- a/App.html
+++ b/App.html
@@ -14,6 +14,6 @@
     <div id="large-container">
         <div id="info-box"></div>
     </div>
-    <script defer src="App.js"></script>
+    <script defer type="text/javascript" src="App.js"></script>
 </body>
 </html>
