--- a/App.html
+++ b/App.html
@@ -6,14 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Popular Java Repos</title>
     <link rel="stylesheet" href="style.css">
+    <script defer src="App.js"></script>
 </head>
 <body>
     <div>
         <h1>Popular Java Repos</h1>
     </div>
     <div id="large-container">
-        <div id="info-box"></div>
-    </div>
-    <script defer type="text/javascript" src="App.js"></script>
+        <div id="info-box">
+            <p id="namestyle"></p>
+        </div>
+    </div>   
 </body>
 </html>
