Made corrections so there's no longer 2 Large-Container divs

--- a/App.html
+++ b/App.html
@@ -10,11 +10,9 @@
 </head>
 <body>
     <div>
-        <h1>Popular Java Repos</h1>
+        <h1 id="title">Popular Java Repos</h1>
     </div>
     <div id="large-container">
-        <div id="info-box">
-            <p id="namestyle"></p>
         </div>
     </div>   
 </body>
