--- a/App.html
+++ b/App.html
@@ -12,6 +12,10 @@
     <div>
         <h1 id="title">Popular Java Repos</h1>
     </div>
+    <div class="search-wrapper">
+        <label for="search">Search Repos</label>
+        <input type="search" id="search">
+    </div>
     <div id="large-container">
         </div>
     </div>   
