Working on Search Feature

--- a/App.html
+++ b/App.html
@@ -14,7 +14,7 @@
     </div>
     <div class="search-wrapper">
         <label for="search">Search Repos</label>
-        <input type="search" id="search">
+        <input type="search" id="search" data-search>
     </div>
     <div id="large-container">
         </div>
