Added Fun Fact of the Day Component

--- a/App.html
+++ b/App.html
@@ -16,6 +16,10 @@
         <label for="search">Search Repos By Name</label>
         <input type="search" id="search" data-search>
     </div>
+    <div>
+        <label id="fact-label">Fun Fact of the Day</label>
+        <div id="fact-container"></div>
+    </div>
     <div id="large-container">
         </div>
     </div>   
